--- a/gradle-slow-tasks/tags-slow-tasks.gradle
+++ b/gradle-slow-tasks/tags-slow-tasks.gradle
@@ -1,9 +1,6 @@
-// Imagine you have a build that, sometimes (but not always), takes much longer than expected.
-// You've looked at some build scans and determined the issue is the JavaCompile task.
-// You can add the following snippet to your root build.gradle script to tag those builds that
-// take "too long" to build. Later on, as a Gradle Enterprise user, you can filter your scans
-// list to see just those builds that contained a JavaCompile task that took "too long".
-// Borrowed from: https://blog.gradle.org/build-scans-tag-root-cause
+/**
+ * This Gradle script captures all tasks of a given type taking longer to execute than a certain threshold via custom values.
+ */
 
 def THRESHOLD_MILLIS = 15 * 60 * 1000 // 15 min
 
@@ -18,8 +15,7 @@ allprojects {
         doLast {
             long duration = System.currentTimeMillis() - start
             if (duration > THRESHOLD_MILLIS) {
-                buildScan.tag 'TooLong'
-                buildScan.value 'TooLong', path
+                buildScan.value 'Slow task', identityPath
             }
         }
     }
