--- a/os-processes/gradle-os-processes.gradle
+++ b/os-processes/gradle-os-processes.gradle
@@ -1,18 +1,33 @@
+import java.nio.charset.Charset
+import java.util.concurrent.TimeUnit
+
 /**
- * This Gradle script captures OS processes as reported by the OS 'ps' command, as custom value.
+ * This Gradle script captures OS processes as reported by the OS 'ps' command via custom value.
  */
 
-buildScan.background {
+def buildScanApi = project.extensions.findByName('buildScan')
+if (!buildScanApi) {
+    return
+}
+
+buildScan.background { api ->
     def psOutput = execAndGetStdout('ps', '-o pid,ppid,time,command')
-    buildScan.value 'OS processes', psOutput
+    api.value 'OS processes', psOutput
 }
 
-static String execAndGetStdout(String... args) {
-    def exec = args.toList().execute()
-    exec.waitFor()
-    trimAtEnd(exec.text)
+String execAndGetStdout(String... args) {
+    Process process = args.toList().execute()
+    try {
+        def standardText = process.getInputStream().getText(Charset.defaultCharset().name())
+        def ignore = process.getErrorStream().getText(Charset.defaultCharset().name())
+
+        def finished = process.waitFor(10, TimeUnit.SECONDS)
+        finished && process.exitValue() == 0 ? trimAtEnd(standardText) : null
+    } finally {
+        process.destroyForcibly()
+    }
 }
 
-static String trimAtEnd(String str) {
+String trimAtEnd(String str) {
     ('x' + str).trim().substring(1)
 }
