Specify gpg signing key

--- a/common-custom-user-data-maven-extension/pom.xml
+++ b/common-custom-user-data-maven-extension/pom.xml
@@ -142,6 +142,9 @@
                                 </goals>
                             </execution>
                         </executions>
+                        <configuration>
+                            <keyname>5208812E1E4A6DB0</keyname>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
