--- a/common-custom-user-data-gradle-script/common-custom-user-data.gradle
+++ b/common-custom-user-data-gradle-script/common-custom-user-data.gradle
@@ -186,22 +186,22 @@ void addCiMetadata() {
 
     if (isTravis()) {
         if (System.getenv('TRAVIS_BUILD_WEB_URL')) {
-            buildScan.link 'TRAVIS build', System.getenv('TRAVIS_BUILD_WEB_URL')
+            buildScan.link 'Travis build', System.getenv('TRAVIS_BUILD_WEB_URL')
         }
         if (System.getenv('TRAVIS_BUILD_NUMBER')) {
-            buildScan.value 'TRAVIS build number', System.getenv('TRAVIS_BUILD_NUMBER')
+            buildScan.value 'Travis build number', System.getenv('TRAVIS_BUILD_NUMBER')
         }
         if (System.getenv('TRAVIS_EVENT_TYPE')) {
             buildScan.tag System.getenv('TRAVIS_EVENT_TYPE')
         }
         if (System.getenv('TRAVIS_TAG')) {
-            buildScan.value 'TRAVIS tag', System.getenv('TRAVIS_TAG')
+            buildScan.value 'Travis tag', System.getenv('TRAVIS_TAG')
         }
         if (System.getenv('TRAVIS_JOB_NAME')) {
-            def jobNameLabel = 'TRAVIS job'
+            def jobNameLabel = 'Travis job'
             def jobName = System.getenv('TRAVIS_JOB_NAME')
             buildScan.value jobNameLabel, jobName
-            addCustomLinkWithSearchTerms buildScan, 'TRAVIS job build scans', [(jobNameLabel): jobName]
+            addCustomLinkWithSearchTerms buildScan, 'Travis job build scans', [(jobNameLabel): jobName]
         }
     }
 }
