--- a/capture-git-diffs/gradle-git-diffs.gradle
+++ b/capture-git-diffs/gradle-git-diffs.gradle
@@ -20,10 +20,10 @@ if (!buildScanApi) {
 }
 
 buildScan.background {
-    publishGist()
+    captureGitDiffInGist()
 }
 
-void publishGist() {
+void captureGitDiffInGist() {
     def isCapturingScan = !gradle.startParameter.offline && !gradle.startParameter.continuous
     if (!isCapturingScan) {
         gradle.rootProject.logger.warn("Build is offline or continuous. Will not publish gist.")
