--- a/common-custom-user-data-gradle-script/common-custom-user-data.gradle
+++ b/common-custom-user-data-gradle-script/common-custom-user-data.gradle
@@ -365,7 +365,7 @@ String hash(Object value) {
         String string = String.valueOf(value)
         byte[] encodedHash = MESSAGE_DIGEST.digest(string.getBytes(StandardCharsets.UTF_8))
         StringBuilder hexString = new StringBuilder()
-        for (int i = 0; i < encodedHash.length / 4; i++) {
+        for (int i = 0; i < encodedHash.length; i = i + 4) {
             String hex = Integer.toHexString(0xff & encodedHash[i])
             if (hex.length() == 1) {
                 hexString.append('0')
