--- a/common-custom-user-data-gradle-script/common-custom-user-data.gradle
+++ b/common-custom-user-data-gradle-script/common-custom-user-data.gradle
@@ -33,7 +33,7 @@ void tagIde() {
         if (project.hasProperty('android.injected.studio.version')) {
             buildScan.value 'Android Studio version', project.getProperty('android.injected.studio.version')
         }
-    } else if (System.getProperty('idea.version')) {
+    } else if (System.getProperty('idea.version') || sysPropertyKeyStartingWith('idea.version')) {
         buildScan.tag 'IntelliJ IDEA'
     } else if (System.getProperty('eclipse.buildId')) {
         buildScan.tag 'Eclipse'
@@ -288,7 +288,7 @@ static boolean isGitInstalled() {
         process = 'git --version'.execute()
         def finished = process.waitFor(10, TimeUnit.SECONDS)
         finished && process.exitValue() == 0;
-    } catch (IOException ignored) {
+    } catch (IOException | InterruptedException ignored) {
         false
     } finally {
         if (process) {
@@ -311,10 +311,7 @@ static String execAndGetStdout(String... args) {
 }
 
 static void addCustomLinkWithSearchTerms(def buildScan, String title, Map<String, String> search) {
-    // This fails with Build Scan plugin v1.16.
-    // As a workaround, you can specify the BuildScan server URL directly: e.g. `def server = "http://localhost"`
     def server = buildScan.server
-
     if (server) {
         String searchParams = customValueSearchParams(search);
         String url = "${appendIfMissing(server, '/')}scans?$searchParams#selection.buildScanB=${urlEncode('{SCAN_ID}')}"
@@ -326,6 +323,18 @@ static String customValueSearchParams(Map<String, String> search) {
     search.collect { name, value ->
         "search.names=${urlEncode(name)}&search.values=${urlEncode(value)}"
     }.join('&')
+}
+
+static boolean sysPropertyKeyStartingWith(String keyPrefix) {
+    System.properties.keySet().each { Object key ->
+        if (key instanceof String) {
+            String stringKey = (String) key;
+            if (stringKey.startsWith(keyPrefix)) {
+                return true;
+            }
+        }
+    }
+    return false;
 }
 
 static String appendIfMissing(String str, String suffix) {
