Copy build scan functionality from Maven Extension

--- a/common-custom-user-data-gradle-plugin/build.gradle
+++ b/common-custom-user-data-gradle-plugin/build.gradle
@@ -13,6 +13,7 @@ repositories {
 
 dependencies {
     compileOnly "com.gradle:gradle-enterprise-gradle-plugin:3.5.1"
+    implementation "com.google.guava:guava:28.0-jre"
 }
 
 gradlePlugin {
