--- a/common-custom-user-data-gradle-plugin/build.gradle
+++ b/common-custom-user-data-gradle-plugin/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id 'java-gradle-plugin'
     id 'maven-publish'
+    id 'com.gradle.plugin-publish' version '0.12.0'
 }
 
 group = "com.gradle"
-version = "0.1"
+version = "0.2.0"
 
 repositories {
     gradlePluginPortal()
@@ -18,7 +19,15 @@ gradlePlugin {
     plugins {
         commonCustomUserData {
             id = 'com.gradle.common-custom-user-data-gradle-plugin'
+            displayName = 'Gradle Enterprise Common Custom User Data Gradle Plugin'
+            description = 'A Gradle Plugin to capture common custom user data used for Gradle Build Scans in Gradle Enterprise'
             implementationClass = 'com.gradle.CommonCustomUserDataGradlePlugin'
         }
     }
+}
+
+pluginBundle {
+    website = "https://github.com/gradle/gradle-enterprise-build-config-samples/tree/master/common-custom-user-data-gradle-plugin"
+    vcsUrl = "https://github.com/gradle/gradle-enterprise-build-config-samples.git"
+    tags = ["gradle", "gradle enterprise"]
 }
