Enable publishing to scans.gradle.com
- Apply `com.gradle.enterprise` plugin
- Apply earlier version of this plugin

--- a/common-custom-user-data-gradle-plugin/settings.gradle
+++ b/common-custom-user-data-gradle-plugin/settings.gradle
@@ -1,1 +1,5 @@
+plugins {
+    id "com.gradle.enterprise" version "3.5.1"
+    id "com.gradle.common-custom-user-data-gradle-plugin" version "1.0"
+}
 rootProject.name = 'common-custom-user-data-gradle-plugin'
