--- a/common-custom-user-data-gradle-plugin/build.gradle
+++ b/common-custom-user-data-gradle-plugin/build.gradle
@@ -4,20 +4,20 @@ plugins {
     id 'com.gradle.plugin-publish' version '0.12.0'
 }
 
-group = "com.gradle"
-version = "1.1"
+group = 'com.gradle'
+version = '1.1'
 
 repositories {
     gradlePluginPortal()
 }
 
 dependencies {
-    compileOnly "com.gradle:gradle-enterprise-gradle-plugin:3.5.1"
+    compileOnly 'com.gradle:gradle-enterprise-gradle-plugin:3.5.1'
 }
 
 // Translate CI variables to project properties used for publishing
-ext["gradle.publish.key"] = findProperty("gradlePublishKey")
-ext["gradle.publish.secret"] = findProperty("gradlePublishSecret")
+ext['gradle.publish.key'] = findProperty('gradlePublishKey')
+ext['gradle.publish.secret'] = findProperty('gradlePublishSecret')
 
 gradlePlugin {
     plugins {
