Enable some Gradle switches

--- a/common-custom-user-data-gradle-plugin/gradle.properties
+++ b/common-custom-user-data-gradle-plugin/gradle.properties
@@ -1,1 +1,4 @@
+org.gradle.vfs.watch=true
 org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.jvmargs=-Duser.language=en -Duser.country=US -Dfile.encoding=UTF-8
