Always publish scans.

--- a/common-custom-user-data-gradle-plugin/settings.gradle
+++ b/common-custom-user-data-gradle-plugin/settings.gradle
@@ -4,3 +4,11 @@ plugins {
 }
 
 rootProject.name = 'common-custom-user-data-gradle-plugin'
+
+gradleEnterprise {
+    buildScan {
+        termsOfServiceUrl = "https://gradle.com/terms-of-service"
+        termsOfServiceAgree = "yes"
+        publishAlways()
+    }
+}
