--- a/gradle-enterprise-maven-caching-sample/pom.xml
+++ b/gradle-enterprise-maven-caching-sample/pom.xml
@@ -7,6 +7,14 @@
   <version>1.0-SNAPSHOT</version>
   <name>gradle-enterprise-maven-caching-sample</name>
 
+  <modules>
+    <module>java-project</module>
+  </modules>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
   <build>
     <plugins>
       <plugin>
