Add sample module using Protobuf

--- a/gradle-enterprise-maven-caching-sample/pom.xml
+++ b/gradle-enterprise-maven-caching-sample/pom.xml
@@ -10,6 +10,7 @@
   <modules>
     <module>java-project</module>
     <module>avro-project</module>
+    <module>protobuf-project</module>
   </modules>
 
   <properties>
