--- a/gradle-enterprise-maven-caching-sample/pom.xml
+++ b/gradle-enterprise-maven-caching-sample/pom.xml
@@ -12,6 +12,7 @@
     <module>avro-project</module>
     <module>protobuf-project</module>
     <module>pmd-project</module>
+    <module>spotbugs-project</module>
   </modules>
 
   <properties>
