--- a/gradle-enterprise-maven-caching-sample/avro-project/pom.xml
+++ b/gradle-enterprise-maven-caching-sample/avro-project/pom.xml
@@ -42,6 +42,89 @@
           </execution>
         </executions>
       </plugin>
+
+      <!-- When resolving from cache, need to explicitly add Avro output as source root -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>3.2.0</version>
+        <executions>
+          <execution>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>target/generated-sources/avro/</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
+
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>com.gradle</groupId>
+          <artifactId>gradle-enterprise-maven-extension</artifactId>
+          <configuration>
+            <gradleEnterprise>
+              <plugins>
+                <plugin>
+                  <groupId>org.apache.avro</groupId>
+                  <artifactId>avro-maven-plugin</artifactId>
+                  <inputs>
+                    <fileSets>
+                      <fileSet>
+                        <name>sourceDirectory</name>
+                        <includesProperty>includes</includesProperty>
+                        <excludesProperty>excludes</excludesProperty>
+                      </fileSet>
+                      <fileSet>
+                        <name>testSourceDirectory</name>
+                        <includesProperty>testIncludes</includesProperty>
+                        <excludesProperty>testExcludes</excludesProperty>
+                      </fileSet>
+                    </fileSets>
+                    <properties>
+                      <property><name>createOptionalGetters</name></property>
+                      <property><name>createSetters</name></property>
+                      <property><name>enableDecimalLogicalType</name></property>
+                      <property><name>gettersReturnOptional</name></property>
+                      <property><name>optionalGettersForNullableFieldsOnly</name></property>
+
+                      <property><name>stringType</name></property>
+                      <property><name>imports</name></property>
+
+                      <property><name>customConversions</name></property>
+                      <property><name>customLogicalTypeFactories</name></property>
+                      <property><name>templateDirectory</name></property>
+                      <property><name>velocityToolsClassesNames</name></property>
+                    </properties>
+                    <ignoredProperties>
+                      <ignore>fieldVisibility</ignore>
+                      <ignore>project</ignore>
+                    </ignoredProperties>
+                  </inputs>
+                  <outputs>
+                    <directories>
+                      <directory>
+                        <name>outputDirectory</name>
+                      </directory>
+                      <directory>
+                        <name>testOutputDirectory</name>
+                      </directory>
+                    </directories>
+                    <cacheableBecause>All inputs and outputs declared</cacheableBecause>
+                  </outputs>
+                </plugin>
+              </plugins>
+            </gradleEnterprise>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
 </project>
