--- a/gradle-enterprise-maven-caching-sample/protobuf-project/pom.xml
+++ b/gradle-enterprise-maven-caching-sample/protobuf-project/pom.xml
@@ -42,6 +42,94 @@
           </execution>
         </executions>
       </plugin>
+
+      <!-- When resolving from cache, need to explicitly add Protobuf output as source root -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>3.2.0</version>
+        <executions>
+          <execution>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>target/generated-sources/protobuf</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
+
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>com.gradle</groupId>
+          <artifactId>gradle-enterprise-maven-extension</artifactId>
+          <configuration>
+            <gradleEnterprise>
+              <plugins>
+                <plugin>
+                  <groupId>com.github.os72</groupId>
+                  <artifactId>protoc-jar-maven-plugin</artifactId>
+                  <inputs>
+                    <fileSets>
+                      <fileSet>
+                        <name>inputDirectories</name>
+                      </fileSet>
+                      <fileSet>
+                        <name>includeDirectories</name>
+                      </fileSet>
+                    </fileSets>
+                    <properties>
+                      <property><name>addProtoSources</name></property>
+                      <property><name>addSources</name></property>
+                      <property><name>cleanOutputFolder</name></property>
+                      <property><name>compileMavenTypes</name></property>
+                      <property><name>extension</name></property>
+                      <property><name>includeImports</name></property>
+                      <property><name>includeMavenTypes</name></property>
+                      <property><name>includeStdTypes</name></property>
+                      <property><name>outputOptions</name></property>
+                      <property><name>pluginArtifact</name></property>
+                      <property><name>pluginPath</name></property>
+                      <property><name>protocArtifact</name></property>
+                      <property><name>protocCommand</name></property>
+                      <property><name>protocVersion</name></property>
+                      <property><name>type</name></property>
+                    </properties>
+                    <ignoredProperties>
+                      <!-- Properties do no impact output files -->
+                      <ignore>optimizeCodegen</ignore>
+                      <ignore>localRepository</ignore>
+                      <ignore>remoteRepositories</ignore>
+                      <ignore>project</ignore>
+
+                      <!-- NOTE : This cache configuration does not handle `outputTargets`, and will produce invalid results if this is set. -->
+                      <ignore>outputTargets</ignore>
+
+                      <!-- NOTE : If outputDirectorySuffix is defined for plugin, then we need to provide the resulting outputDirectory path below -->
+                      <ignore>outputDirectorySuffix</ignore>
+                    </ignoredProperties>
+                  </inputs>
+
+                  <outputs>
+                    <directories>
+                      <directory>
+                        <name>outputDirectory</name>
+                      </directory>
+                    </directories>
+                    <cacheableBecause>All inputs and outputs declared</cacheableBecause>
+                  </outputs>
+                </plugin>
+              </plugins>
+            </gradleEnterprise>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
 </project>
