Enable build cache for PMD

--- a/gradle-enterprise-maven-caching-sample/pmd-project/pom.xml
+++ b/gradle-enterprise-maven-caching-sample/pmd-project/pom.xml
@@ -34,5 +34,109 @@
         </executions>
       </plugin>
     </plugins>
+
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>com.gradle</groupId>
+          <artifactId>gradle-enterprise-maven-extension</artifactId>
+          <configuration>
+            <gradleEnterprise>
+              <plugins>
+                <plugin>
+                  <artifactId>maven-pmd-plugin</artifactId>
+                  <executions>
+                    <execution>
+                      <id>pmd</id>
+                      <inputs>
+                        <fileSets>
+                          <fileSet>
+                            <name>compileSourceRoots</name>
+                            <includesProperty>includes</includesProperty>
+                            <excludesProperty>excludes</excludesProperty>
+                          </fileSet>
+                          <fileSet>
+                            <name>testSourceRoots</name>
+                            <includesProperty>includes</includesProperty>
+                            <excludesProperty>excludes</excludesProperty>
+                          </fileSet>
+                        </fileSets>
+
+                        <properties>
+                          <property><name>skip</name></property>
+                          <property><name>format</name></property>
+                          <property><name>linkXRef</name></property>
+                          <property><name>includeTests</name></property>
+                          <property><name>aggregate</name></property>
+                          <property><name>sourceEncoding</name></property>
+                          <property><name>includeXmlInSite</name></property>
+                          <property><name>skipEmptyReport</name></property>
+                          <property><name>excludeFromFailureFile</name></property>
+                          <property><name>jdkToolchain</name></property>
+                          <property><name>targetJdk</name></property>
+                          <property><name>language</name></property>
+                          <property><name>minimumPriority</name></property>
+                          <property><name>rulesets</name></property>
+                          <property><name>typeResolution</name></property>
+                          <property><name>benchmark</name></property>
+                          <property><name>suppressMarker</name></property>
+                          <property><name>skipPmdError</name></property>
+                          <property><name>renderProcessingErrors</name></property>
+                          <property><name>renderRuleViolationPriority</name></property>
+                          <property><name>renderViolationsByPriority</name></property>
+                        </properties>
+                        <ignoredProperties>
+                          <ignore>showPmdLog</ignore>
+                          <ignore>reactorProjects</ignore>
+                          <ignore>session</ignore>
+                          <!-- Temporary file location can be ignored, assuming no external process is relying on these ruleset files. -->
+                          <ignore>rulesetsTargetDirectory</ignore>
+
+                          <!-- NOTE: Not really correct to ignore these: this means that excluded roots will be included in the cache key,
+                                     so changes in an excluded root will result in cache misses. -->
+                          <ignore>excludeRoots</ignore>
+
+                          <!-- NOTE: It's not quite correct to ignore these values. This means that if _only_ these values are changed,
+                                     an invalid cache hit would result, producing the old report without the correct xref. -->
+                          <ignore>xrefLocation</ignore>
+                          <ignore>xrefTestLocation</ignore>
+
+                          <!-- This wil ignore the analysis cache if used, leaving it in place for subsequent invocations -->
+                          <!-- It's not clear if this is actually correct, or if we should mark as <localState> to purge the analysisCache when loading results from the build cache -->
+                          <!-- In general this is unimportant, since `clean` will remove the analysis cache. -->
+                          <ignore>analysisCache</ignore>
+                          <ignore>analysisCacheLocation</ignore>
+
+                          <!-- Ignored because we hard-code the outputs below. -->
+                          <!-- There is no way to automatically combine these 2 property values into a single output file name. -->
+                          <ignore>targetDirectory</ignore>
+                          <ignore>benchmarkOutputFilename</ignore>
+                        </ignoredProperties>
+                      </inputs>
+                      <outputs>
+                        <!-- There's no single property for each output file, so we must compose the path.
+                        These will need to be updated if <targetDirectory> or <benchmarkOutputFilename> are set. -->
+                        <files>
+                          <file>
+                            <name>pmdOutputFile</name>
+                            <path>${project.build.directory}/pmd.xml</path>
+                          </file>
+                          <file>
+                            <name>pmdBenchmarkFile</name>
+                            <path>${project.build.directory}/pmd-benchmark.txt</path>
+                          </file>
+                        </files>
+                        <cacheableBecause>All inputs and outputs declared</cacheableBecause>
+                      </outputs>
+                    </execution>
+                  </executions>
+                </plugin>
+              </plugins>
+            </gradleEnterprise>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+
   </build>
 </project>
